fix for #385 - use white-space:pre-wrap

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -460,7 +460,7 @@ table {
 }
 
 .main .info #markup .description {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .main .info .meta .admin {
